# xray

./: .gitignore  README.md  draft.py  pickle_test.pkl  pyproject.toml  xray_vision_checkpoint_1_May7_2024.ipynb  xray_vision_checkpoint_1_final_submission.ipynb  xray_vision_cnn.ipynb  xray_vision_cnn_w_graphs.ipynb
pre_processing/: img_to_array.ipynb  sum_stats.json  sum_stats.py  xray_checkpoint_1_gabe.ipynb
transformations/: image_augmentation.ipynb  xray_vision_checkpoint_1.ipynb  xray_vision_checkpoint_1_V2.ipynb  xray_vision_checkpoint_1_V3 .ipynb  xray_vision_checkpoint_1_final_submission.ipynb  xray_vision_cnn_new_transform_tuning.ipynb
user_tutorials/: image_preprocessing.py
